# serenity

Userland/Applications/: CMakeLists.txt
Userland/Applications/NatNetMusic/: CMakeLists.txt  Widget.cpp  Widget.h  Window.gml  main.cpp
Userland/Services/Taskbar/: TaskbarWindow.cpp  main.cpp
